--- a/src/TimeyWimey/TimeRegistration/TimeActivityEditor.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeActivityEditor.razor
@@ -35,7 +35,7 @@
     {
         if (firstRender)
         {
-            await _nameField.FocusAsync();
+            await _nameField!.FocusAsync();
         }
     }
 
