Use a CascadingValue to pass the reference to the svg element down the tree instead of doing it manually like an idiot

--- a/src/TimeyWimey/TimeRegistration/DayDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/DayDisplay.razor
@@ -35,7 +35,9 @@
     
 }
 <CascadingValue Value="@_currentMouseEventArgs">
-    <TimeEntriesDisplay Day="Day" SvgElement="SvgElement"/>
+    <CascadingValue Value="SvgElement">
+        <TimeEntriesDisplay Day="Day"/>
+    </CascadingValue>
 </CascadingValue>
 
 @foreach (var (time, y, _, hour) in EnumerateDay(24))
