--- a/src/TimeyWimey/TimeRegistration/EntryTimeDraggable.razor
+++ b/src/TimeyWimey/TimeRegistration/EntryTimeDraggable.razor
@@ -45,7 +45,7 @@
     [Parameter]
     public bool AllowVerticalDrag { get; set; } = true;
 
-    [Parameter]
+    [CascadingParameter]
     public ElementReference SvgElement { get; set; }
 
     [Parameter]
