--- a/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
@@ -30,12 +30,12 @@ var bottom = y + height;
         <text x="50%" y="@(textPos + 1)%" class="entryTitle" style="font-size: 1rem; fill: @(CalculateForegroundTextColor())" width="100%">@Entry.Activity.Name</text>
     </text>
 }
-    <EntryTimeDraggable  @bind-Y="YTop" X="0" SvgElement="@SvgElement" @bind-YPercent="YPercentTop"
+    <EntryTimeDraggable  @bind-Y="YTop" X="0" @bind-YPercent="YPercentTop"
                          DragCompleted="async () => await TopDragCompleted()">
     <rect fill="#00000000" height="5px" width="100%" y="@(y)%"/>
     <rect fill="black" height="1px" width="100%" y="@(y)%"/>
 </EntryTimeDraggable>
-    <EntryTimeDraggable X="0" SvgElement="@SvgElement" @bind-Y="YBottom" @bind-YPercent="YPercentBottom"
+    <EntryTimeDraggable X="0" @bind-Y="YBottom" @bind-YPercent="YPercentBottom"
                         DragCompleted="async () => await BottomDragCompleted()">
     <rect fill="#00000000" x="0" y = "@(bottom)%" height="5px" width="100%"/>
     <rect fill="black" height="1px" width="100%" y="@(bottom)%"/>
@@ -48,9 +48,6 @@ var bottom = y + height;
 
     [Parameter]
     public TimeEntry? Entry { get; set; }
-
-    [Parameter]
-    public ElementReference SvgElement { get; set; }
 
     [CascadingParameter]
     public MouseEventArgs? CurrentMouseEventArgs { get; set; }
