--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -105,9 +105,9 @@
         var options = new DialogOptions
         {
             CloseButton = true,
-            DisableBackdropClick = true,
+            DisableBackdropClick = false,
             MaxWidth = MaxWidth.Large,
-            FullWidth = true,
+            FullWidth = false,
             Position = DialogPosition.Center,
         };
 
