--- a/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
@@ -3,8 +3,11 @@
 @using TimeyWimey.Data
 @using MudBlazor;
 @using MudBlazor.Utilities
+@using System.Reactive.Linq
 @inject TimeLineCalculator _lineCalculator;
 @inject DataPersistence _persistence;
+@inject EventAggregator _aggregator;
+@implements IDisposable;
 
 @if (Day == null)
 {
@@ -17,17 +20,17 @@ var height = _lineCalculator.HourVerticalPosition(Entry.End.ToTimeSpan()) - y;
 var textPos = y + (height / 2);
 var bottom = y + height;
 
-    <rect fill="@CalculateColorWithAlpha(Entry.Color)" y="@(y)%" x="0" height="@(height)%" width="100%" rx="3" ry="3"
+    <rect fill="@CalculateColorWithAlpha(EntryColor)" y="@(y)%" x="0" height="@(height)%" width="100%" rx="3" ry="3"
           style="cursor: pointer" @onclick="async e => await Menu!.Toggle(e)">
 </rect>
 <TimeEntryMenu @ref=@Menu Committed="TimeEntryCommitted" Day="Day" Entry="Entry"/>
 <text>
-    <text x="50%" y="@(textPos)%" class="entryTitle" style="fill: @(CalculateForegroundTextColor())" width="100%">@Entry.Title</text>
+    <text x="50%" y="@(textPos)%" class="entryTitle" style="fill: @(CalculateForegroundTextColor(EntryColor))" width="100%">@Entry.Title</text>
 </text>
 @if (Entry.Activity != null && Entry.Title != Entry.Activity.Name)
 {
     <text>
-        <text x="50%" y="@(textPos + 1)%" class="entryTitle" style="font-size: 1rem; fill: @(CalculateForegroundTextColor())" width="100%">@Entry.Activity.Name</text>
+        <text x="50%" y="@(textPos + 1)%" class="entryTitle" style="font-size: 1rem; fill: @(CalculateForegroundTextColor(EntryColor))" width="100%">@Entry.Activity.Name</text>
     </text>
 }
     <EntryTimeDraggable  @bind-Y="YTop" X="0" @bind-YPercent="YPercentTop"
@@ -51,6 +54,8 @@ var bottom = y + height;
 
     [CascadingParameter]
     public MouseEventArgs? CurrentMouseEventArgs { get; set; }
+
+    public string EntryColor => Entry.Color ?? Entry?.Activity?.Color;
 
 
     public double YTop { get; set; }
@@ -80,6 +85,7 @@ var bottom = y + height;
     private const byte EntryAlpha = 128;
     private const int MinutesPerDay = 1440;
     private double _yPercentBottom;
+    private IDisposable _subscription;
 
 
     public double YPercentBottom
@@ -106,6 +112,24 @@ var bottom = y + height;
         {
             await Menu!.Toggle(CurrentMouseEventArgs ?? new MouseEventArgs());
         }
+    }
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        _subscription = _aggregator.Listen<TimeActivityUpdated>()
+            .Where(ta => ta.Activity.Id == Entry?.Activity?.Id)
+            .Where(_ => Entry != null)
+            .Subscribe(ta =>
+            {
+                Entry!.Activity = ta.Activity;
+                StateHasChanged();
+            });
+    }
+
+    void IDisposable.Dispose()
+    {
+        _subscription?.Dispose();
     }
 
 
@@ -159,7 +183,7 @@ var bottom = y + height;
         StateHasChanged();
     }
 
-    private string CalculateForegroundTextColor()
+    private string CalculateForegroundTextColor(string? activityColor)
     {
         try
         {
@@ -174,6 +198,10 @@ var bottom = y + height;
 
     private string CalculateColorWithAlpha(string? entryColor)
     {
+        if (entryColor == null)
+        {
+            return "#FF00FF";
+        }
         var baseColor = new MudColor(entryColor);
         var color = new MudColor((byte)baseColor.R, (byte)baseColor.G, (byte)baseColor.B, (byte)EntryAlpha);
         return color.ToString();
