Increase the alpha on the time entries

--- a/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
@@ -82,10 +82,10 @@ var bottom = y + height;
         }
     }
 
-    private const byte EntryAlpha = 128;
+    private const byte EntryAlpha = 196;
     private const int MinutesPerDay = 1440;
     private double _yPercentBottom;
-    private IDisposable _subscription;
+    private IDisposable? _subscription;
 
 
     public double YPercentBottom
