--- a/src/TimeyWimey/TimeRegistration/DayDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/DayDisplay.razor
@@ -95,6 +95,7 @@
             Title = "",
             Start = timeOnly,
             End = timeOnly.AddHours(0.5),
+            Notes = "",
             NeedsInitializaton = true,
         };
         Day.Entries.Add(timeEntry);
