--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -29,6 +29,11 @@
                 </div>
                 <div class="d-flex flex-column">
                     <MudTextField @bind-Value="Entry.Title" Label="Title" @onkeypress="OnKeyPress"/>
+                    <MudTextField @bind-Value="Entry.Notes" Label="Notes" Lines="8" FullWidth="true"/>
+                    <div class="d-flex flex-row">
+                        <MudIconButton Icon="@Icons.Material.Filled.Save" Size="Size.Small" OnClick="async () => await Save()"></MudIconButton>
+                        <MudIconButton Icon="@Icons.Material.Filled.Cancel" Size="Size.Small"></MudIconButton>
+                    </div>
                 </div>
             </div>
             <div class="d-flex flex-row">
@@ -56,8 +61,9 @@
     private string? _searchText;
 
 
-    public async ValueTask Toggle(MouseEventArgs obj)
+    public async ValueTask Toggle(MouseEventArgs obj = default)
     {
+        obj ??= new();
         Menu!.PopoverStyle = $"margin-top: {obj.ClientY}px; margin-left: {obj.ClientX}px";
         _activities = await _persistence.GetActivities();
         _filteredActivities = _activities;
@@ -77,9 +83,14 @@
     {
         if (arg.Key == "Enter")
         {
-            await Committed.InvokeAsync();
+            await Save();
             await Toggle(new MouseEventArgs());
         }
+    }
+
+    private async Task Save()
+    {
+        await Committed.InvokeAsync();
     }
 
     private async Task SetActivity(TimeActivity activity)
