--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -116,12 +116,12 @@
     private async Task New()
     {
         var activity = new TimeActivity{Color = new MudColor(0, 255, 0, 255).ToString(MudColorOutputFormats.HexA)};
-        await EditActivity(activity, "New activity");
+        await EditActivity(activity, "New code");
     }
 
     private async Task Edit()
     {
-        await EditActivity(Entry!.Activity!, "Edit activity");
+        await EditActivity(Entry!.Activity!, "Edit code");
         _aggregator.Publish(new TimeActivityUpdated(Entry.Activity!));
     }
 
